# vw-file-discover

./: .env.development  .env.example  .gitignore  Cargo.toml  README.md
migrations/: 001_initial_schema.sql
src/: lib.rs  main.rs
src/crypto/: aes_gcm.rs  mod.rs
src/database/: connection.rs  repositories.rs
src/models/: file_trace.rs  fvw_arq_diario_ext.rs  mod.rs
src/services/: file_copy.rs  file_discovery.rs  mod.rs
src/utils/: file_operations.rs  mod.rs
